# distillfeed

./: .dockerignore  .gitattributes  .gitignore  CITATION.cff  Dockerfile  LICENSE  Procfile  README.md  config.example.toml  install.sh  launch.sh  pyproject.toml  render.yaml  test-distillfeed.sh  upd.sh
deployment/: .htaccess.example  apache-vhost.conf  config.systemd.toml.example  rssreader-refresh.service  rssreader-refresh.timer  rssreader.service  start.sh
distillfeed_arxiv/: __init__.py  config.py  fetch.py  llm.py  models.py  notifications.py  plugin.py  scoring.py
examples/: empty-subscriptions.opml
rss_reader/: __init__.py  ai_engine.py  ai_errors.py  ai_policy.py  ai_queue.py  ai_readiness.py  ai_usage.py  backup.py  baseline.py  cli.py  config.py  db.py  feeds.py  generated_feeds.py  launcher.py  migration.py  net.py  notice_service.py  notifications.py  ntfy_policy.py  operations.py  opml.py  plugins.py  scheduler.py  secret_store.py  service.py  setup_service.py  setup_state.py  setup_web.py  weather.py  web.py
tests/: conftest.py  test_ai_policy.py  test_ai_summary_state_machine.py  test_ai_utilities.py  test_bundled_arxiv.py  test_cli.py  test_config.py  test_db.py  test_features.py  test_feeds.py  test_generated_feeds.py  test_launch_lifecycle.py  test_migration.py  test_net.py  test_notifications.py  test_operations_and_readiness.py  test_opml.py  test_plugins.py  test_scheduler.py  test_secret_store.py  test_service.py  test_setup_api.py  test_setup_commit.py  test_setup_profiles.py  test_setup_state_model.py  test_state_model.py  test_weather.py  (+1 more)
(+21 files in other folders)
